--- a/front-end/index.html
+++ b/front-end/index.html
@@ -15,8 +15,12 @@
         <script type="module" src="src/elements/vir-app.ts"></script>
     </head>
     <style>
-        body {
+        body,
+        html {
             font-family: sans-serif;
+            height: 100%;
+            width: 100%;
+            margin: 0;
         }
     </style>
 
